--- a/sample/res/values/strings.xml
+++ b/sample/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="activity_drawer_layout">DrawerLayout</string>
     <string name="activity_slidingpane_ayout">SlidingPaneLayout</string>
+    <string name="activity_view">No View</string>
 
     <string-array name="planets_array">
         <item>Mercury</item>
