--- a/sample/res/values/strings.xml
+++ b/sample/res/values/strings.xml
@@ -2,10 +2,20 @@
 <resources>
 
     <string name="app_name">ActionBarToggle Demo</string>
+    <string name="app_ver">ActionBar Toggle v1.1</string>
+    <string name="app_company">Developed By DWorkS</string>
+    <string name="app_url">http://www.dworks.in</string>
+    <string name="app_about_info">To make a small difference.</string>
+    <string name="app_contrib">Contributions by Hari Krishna Dulipudi</string>
+    <string name="app_about">This library can be used to attach action bar toggle to drawer, sliding pane and replace back button</string>
+    <string name="twitter"><a href="https://twitter.com/1HaKr"> Twitter</a></string>
+    <string name="gplus"><a href="https://plus.google.com/109240246596102887385"> Google+</a></string>
+
+    
     <string name="action_settings">Settings</string>
     <string name="activity_drawer_layout">DrawerLayout</string>
     <string name="activity_slidingpane_ayout">SlidingPaneLayout</string>
-    <string name="activity_view">No View</string>
+    <string name="activity_view">Back Button</string>
 
     <string-array name="planets_array">
         <item>Mercury</item>
@@ -24,5 +34,4 @@
     <string name="slider_close">Close sliding pane</string>
     <string name="action_websearch">Web search</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
-
 </resources>
